--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html >
-<html lang="en" ng-app>
+<html lang="en"
+      ng-app="minmax">
 <head>
-    <title>Data Binding</title>
+    <title>Controllers</title>
     <link href="../libs/bootstrap/dist/css/bootstrap.min.css"
           rel="stylesheet">
     <link href="main.css"
@@ -10,15 +11,58 @@
 
 <body>
 
-<div class="container" ng-init="title='CodeCraft'; awesome=true">
-    <h1>{{ title }} is Awesome: {{ awesome }}</h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand"
+               href="/">Controllers
+            </a>
+        </div>
+        ,
+    </div>
+</nav>
 
-    <input type="text" class="fomr-control" ng-model="title"/>
+<div class="container main-content" ng-controller="MinMaxCtrl">
 
-    <input type="checkbox" class="fomr-control" ng-model="awesome"/>
+    <form>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text"
+                   class="form-control"
+                   ng-model="formModel.name"
+                   id="name">
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email"
+                   class="form-control"
+                   ng-model="formModel.email"
+                   id="email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password"
+                   class="form-control"
+                   ng-model="formModel.password"
+                   id="password">
+        </div>
+
+        <div class="form-group">
+            <button class="btn btn-primary" ng-click="onSubmit()">Register
+            </button>
+        </div>
+
+    </form>
+
+    <pre>{{ formModel | json }}</pre>
 
 </div>
 
 <script src="../libs/angular/angular.min.js"></script>
+<script src="main.js"></script>
+
+
 </body>
 </html>
