--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand"
-               href="/">Form Validation - Part 1
+               href="/">Form Validation - Part 2
             </a>
         </div>
     </div>
@@ -19,41 +19,25 @@
 
 <div class="container main-content" ng-controller="MinMaxCtrl">
 
-    <form name="theForm"
-          ng-submit="onSubmit(theForm.$valid)"
+    <form ng-submit="onSubmit()"
           novalidate="novalidate">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text"
                    class="form-control"
                    ng-model="formModel.name"
-                   id="name">
+                   id="name" required="required">
         </div>
 
-        <div class="form-group" ng-class="
-		    {
-            'has-error' :! theForm.email.$valid && (!theForm.$pristine || theForm.$submitted),
-            'has-success': theForm.email.$valid && !theForm.$pristine
-		    }
-		">
-            <label for="email">Email</label>
+        <div class="form-group">
+            <label for="email" class="control-label">Email</label>
             <input type="email"
                    class="form-control"
                    ng-model="formModel.email"
                    id="email"
-                   name="email"
-                   required="required">
-            <p class="help-block" ng-show="theForm.email.$error.required && (!theForm.$pristine || theForm.$submitted)">
-                This field is required
-            </p>
-            <p class="help-block" ng-show="theForm.email.$error.email && !theForm.$pristine">
-                Enter a valid e-mail addres
-            </p>
+                   required="required"
+                   name="email">
 
-            <pre>Validation? {{theForm.email.$error | json }}</pre>
-            <pre>Fiel Valid? {{theForm.email.$valid }}</pre>
-            <pre>Form Pristine? {{theForm.$pristine }}</pre>
-            <pre>Form Submited? {{theForm.$submitted }}</pre>
         </div>
 
         <div class="form-group">
@@ -61,27 +45,33 @@
             <input type="text"
                    class="form-control"
                    ng-model="formModel.username"
-                   id="username">
+                   ng-pattern="/^[A-Za-z0-9_]{1,32}$/"
+                   ng-pattern-err-type="badUsername"
+                   ng-minlength="7"
+                   id="username" required="required">
         </div>
 
         <div class="form-group">
             <label for="age">Age</label>
             <input type="number"
+                   min="18"
+                   max="64"
                    class="form-control"
                    ng-model="formModel.age"
-                   id="age">
+                   ng-min-err-type="tooYoung"
+                   ng-max-err-type="tooOld"
+                   id="age" required="required">
         </div>
 
         <div class="form-group">
             <label for="sex">Sex</label>
-            <select name="sex"
-                    id="sex"
+            <select id="sex"
                     class="form-control"
                     ng-model="formModel.sex">
                 <option value="">Please Choose</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
-            </select>
+            </select required="required">
         </div>
 
         <div class="form-group">
@@ -89,7 +79,8 @@
             <input type="password"
                    class="form-control"
                    ng-model="formModel.password"
-                   id="password">
+                   ng-minlength="10"
+                   id="password" required="required">
         </div>
 
         <div class="form-group">
@@ -100,12 +91,13 @@
 
     </form>
 
-    <pre>{{ theForm | json }}</pre>
+    <pre>{{ formModel | json }}</pre>
 
 </div>
 
 
 <script src="../libs/angular/angular.min.js"></script>
+<script src="../libs/angular-auto-validate/dist/jcs-auto-validate.min.js"></script>
 <script src="main.js"></script>
 
 
