--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html >
 <html lang="en" ng-app="minmax">
 <head>
-    <title>Form Validation - Part 2</title>
+    <title>User Feedback</title>
     <link href="../libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../libs/ladda/dist/ladda-themeless.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 
@@ -11,7 +12,7 @@
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand"
-               href="/">Form Validation - Part 2
+               href="/">User Feedback
             </a>
         </div>
     </div>
@@ -20,13 +21,15 @@
 <div class="container main-content" ng-controller="MinMaxCtrl">
 
     <form ng-submit="onSubmit()"
-          novalidate="novalidate">
+          novalidate="novalidate"
+          ng-hide="submitted">
         <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name" class="control-label">Name</label>
             <input type="text"
                    class="form-control"
                    ng-model="formModel.name"
-                   id="name" required="required">
+                   id="name"
+                   required="required">
         </div>
 
         <div class="form-group">
@@ -35,69 +38,88 @@
                    class="form-control"
                    ng-model="formModel.email"
                    id="email"
-                   required="required"
-                   name="email">
-
+                   required="required">
         </div>
 
         <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username" class="control-label">Username</label>
             <input type="text"
                    class="form-control"
                    ng-model="formModel.username"
                    ng-pattern="/^[A-Za-z0-9_]{1,32}$/"
-                   ng-pattern-err-type="badUsername"
                    ng-minlength="7"
-                   id="username" required="required">
+                   ng-pattern-err-type="badUsername"
+                   id="username"
+                   required="required">
         </div>
 
         <div class="form-group">
-            <label for="age">Age</label>
+            <label for="age" class="control-label">Age</label>
             <input type="number"
-                   min="18"
-                   max="64"
                    class="form-control"
                    ng-model="formModel.age"
+                   min="18"
+                   max="64"
+                   id="age"
                    ng-min-err-type="tooYoung"
                    ng-max-err-type="tooOld"
-                   id="age" required="required">
+                   required="required">
         </div>
 
         <div class="form-group">
-            <label for="sex">Sex</label>
+            <label for="sex" class="control-label">Sex</label>
             <select id="sex"
                     class="form-control"
-                    ng-model="formModel.sex">
+                    ng-model="formModel.sex"
+                    required="required">
                 <option value="">Please Choose</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
-            </select required="required">
+            </select>
         </div>
 
         <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password" class="control-label">Password</label>
             <input type="password"
                    class="form-control"
                    ng-model="formModel.password"
-                   ng-minlength="10"
-                   id="password" required="required">
+                   id="password"
+                   required="required"
+                   ng-minlength="10">
         </div>
 
         <div class="form-group">
+
+            <div class="alert alert-danger text-center" ng-show="has_error">
+                <h3>There was a problem registering, please try again later!</h3>
+            </div>
+
             <button class="btn btn-primary"
-                    type="submit">Register
+                    ladda="submitting"
+                    data-style="expand-right"
+                    type="submit">
+                <span ng-show="submitting">Registering</span>
+                <span ng-show="!submitting">Register</span>
             </button>
         </div>
 
     </form>
 
-    <pre>{{ formModel | json }}</pre>
+    <!-- pre>{{ formModel | json }}</pre -->
+    <div class="alert alert-info text-center" ng-show="submitted">
+        <h3>Thanks for Registering!</h3>
+    </div>
+
 
 </div>
 
 
 <script src="../libs/angular/angular.min.js"></script>
 <script src="../libs/angular-auto-validate/dist/jcs-auto-validate.min.js"></script>
+<script src="../libs/ladda/dist/spin.min.js"></script>
+<script src="../libs/ladda/dist/ladda.min.js"></script>
+<script src="../libs/angular-ladda/dist/angular-ladda.min.js"></script>
+
 <script src="main.js"></script>
 
 
