--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -22,14 +22,14 @@
     <table class="table table-bordered">
 
         <tr>
-            <th></th>
+            <th>#</th>
             <th>Name</th>
             <th>Email</th>
             <th>Birthday</th>
         </tr>
 
         <tr ng-repeat="person in persons">
-            <td></td>
+            <td>{{ $index+1 }}</td>
             <td>{{ person.name }}</td>
             <td>{{ person.email }}</td>
             <td>{{ person.birthdate }}</td>
