--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -28,7 +28,11 @@
             <th>Birthday</th>
         </tr>
 
-        <tr ng-repeat="person in persons">
+        <tr ng-repeat="person in persons"
+            ng-style="{
+                'background-color': $index == selectedIndex ? '#f7f7f7' : ''
+            }"
+            ng-click="selectPerson($index)">
             <td>{{ $index+1 }}</td>
             <td>{{ person.name }}</td>
             <td>{{ person.email }}</td>
