--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -20,6 +20,21 @@
 <div class="container main-content" ng-controller="PersonsController">
 
     <div class="row">
+        <div class="md-col-12">
+            <form class="form-inline well well-lg">
+                <span class="glyphicon glyphicon-search"></span>
+
+                <div class="form-group">
+                    <input ng-model="search.name" type="text" class="form-control" id="name" placeholder="Search Name..." />
+                </div>
+
+                <div class="form-group">
+                    <input ng-model="search.email" type="text" class="form-control" id="email" placeholder="Search Email..." />
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-8">
             <table class="table table-bordered">
                 <tr>
@@ -28,7 +43,7 @@
                     <th>Email</th>
                     <th>Birthday</th>
                 </tr>
-                <tr ng-repeat="person in persons"
+                <tr ng-repeat="person in persons | filter: search"
                     ng-style="{
                 'background-color': $index == selectedIndex ? '#f7f7f7' : ''
             }"
@@ -62,6 +77,7 @@
                     </dl>
                 </div>
             </div>
+            <!-- pre>{{ search }}</pre -->
         </div>
     </div>
 
