feat: Case Sensitive Search

--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -23,19 +23,9 @@
         <div class="md-col-12">
             <form class="form-inline well well-lg">
                 <span class="glyphicon glyphicon-search"></span>
-
-                <!-- search in all attributes -->
                 <div class="form-group">
-                    <input ng-model="search.$" type="text" class="form-control" id="search" placeholder="Search ..." />
+                    <input ng-model="search" type="text" class="form-control" id="search" placeholder="Search ..." />
                 </div>
-
-                <!-- div class="form-group">
-                    <input ng-model="search.name" type="text" class="form-control" id="name" placeholder="Search Name..." />
-                </div>
-
-                <div class="form-group">
-                    <input ng-model="search.email" type="text" class="form-control" id="email" placeholder="Search Email..." />
-                </div -->
             </form>
         </div>
     </div>
@@ -48,7 +38,7 @@
                     <th>Email</th>
                     <th>Birthday</th>
                 </tr>
-                <tr ng-repeat="person in persons | filter: search"
+                <tr ng-repeat="person in persons | filter: sensitiveSearch"
                     ng-style="{
                 'background-color': $index == selectedIndex ? '#f7f7f7' : ''
             }"
