--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -94,6 +94,7 @@
 </div>
 
 <script src="../libs/angular/angular.min.js"></script>
+<script src="../libs/angular-resource/angular-resource.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
