--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -35,7 +35,7 @@
                     </select>
                 </div>
             </form>
-            <table class="table table-bordered">
+            <table class="table table-bordered" infinite-scroll="loadMore()" infinite-scroll-distance="1">
                 <tr>
                     <th>#</th>
                     <th>Name
@@ -95,6 +95,7 @@
 
 <script src="../libs/angular/angular.min.js"></script>
 <script src="../libs/angular-resource/angular-resource.min.js"></script>
+<script src="../libs/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
