feat: deleting contact

--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -72,7 +72,11 @@
         </div>
         <div class="col-md-4" ng-controller="PersonDetailController">
             <div class="panel panel-default">
-                <div class="panel-heading">Detailed Information</div>
+                <div class="panel-heading">Detailed Information
+                    <button class="btn btn-danger btn-xs pull-right"
+                            ladda="contacts.isDeleting"
+                            ng-click="remove()">Delete</button>
+                </div>
                 <div class="panel-body">
                     <form class="form-horizontal" ng-submit="save()" novalidate>
                         <div class="form-group">
