--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -4,6 +4,7 @@
     <title>Contacts App</title>
     <link href="../libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../libs/bootstrap-additions/dist/bootstrap-additions.min.css" rel="stylesheet">
+    <link href="../libs/angularjs-toaster/toaster.min.css" rel="stylesheet">
     <link href="../libs/ladda/dist/ladda-themeless.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
@@ -20,6 +21,7 @@
 </nav>
 
 <div class="container main-content">
+    <toaster-container></toaster-container>
     <div class="row">
         <div class="col-md-8" ng-controller="PersonListController">
             <form class="form-inline well well-lg">
@@ -100,6 +102,7 @@
 
 <script src="../libs/angular/angular.min.js"></script>
 <script src="../libs/angular-resource/angular-resource.min.js"></script>
+<script src="../libs/angular-animate/angular-animate.min.js"></script>
 <script src="../libs/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 <script src="../libs/spin.js/spin.js"></script>
 <script src="../libs/angular-spinner/angular-spinner.min.js"></script>
@@ -108,6 +111,7 @@
 <script src="../libs/angular-ladda/dist/angular-ladda.min.js"></script>
 <script src="../libs/angular-strap/dist/angular-strap.min.js"></script>
 <script src="../libs/angular-strap/dist/angular-strap.tpl.min.js"></script>
-<script src="main.js"></script>
+<script src="../libs/angularjs-toaster/toaster.min.js"></script>
+=<script src="main.js"></script>
 </body>
 </html>
