--- a/Contacts App/index.html
+++ b/Contacts App/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Contacts App</title>
     <link href="../libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="flatly.css" rel="stylesheet">
     <link href="../libs/bootstrap-additions/dist/bootstrap-additions.min.css" rel="stylesheet">
     <link href="../libs/angularjs-toaster/toaster.min.css" rel="stylesheet">
     <link href="../libs/ladda/dist/ladda-themeless.min.css" rel="stylesheet">
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand"
